@@ -343,7 +343,14 @@
 			$result = array();
 			
 			foreach ($array as $key => $value) {
-				$result[] = $key.'='.urlencode($value);
+				if (is_array($value)) {
+					foreach ($value as $valueKey => $simpleValue) {
+						$result[] =
+							$key.'['.$valueKey.']='.urlencode($simpleValue);
+					}
+				} else {
+					$result[] = $key.'='.urlencode($value);
+				}
 			}
 			
 			return implode('&', $result);
